# S1-Prog-Workshop

./: CMakeLists.txt  README.md
lib/: random.cpp  random.hpp
lib/sil/: CMakeLists.txt  README.md
lib/sil/include/sil/: sil.hpp
lib/sil/lib/glm/: CMakeLists.txt
lib/sil/lib/img/: CMakeLists.txt  README.md
lib/sil/lib/img/.github/workflows/: build.yml
lib/sil/lib/img/include/img/: img.hpp
lib/sil/lib/img/lib/stb_image/: stb_image.cpp
lib/sil/lib/img/src/: Image.h  Load.cpp  Load.h  Save.cpp  Save.h  Size.h  SizeU.h
src/: main.cpp
